# capra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/logo/: raw.aseprite
examples/: CMakeLists.txt  indev.cpp
include/: CMakeLists.txt
include/capra/: capra.hpp
include/capra/core/: engine.hpp  glfw_callbacks.hpp  msg_bus.hpp  msg_data.hpp  msg_def.hxx
include/capra/core/module/: application.hpp  glcontext.hpp  inputmgr.hpp  module.hpp  window.hpp
include/capra/gfx/: color.hpp
include/capra/gfx/gl/: buffer_base.hpp  framebuffer.hpp  shader.hpp  static_buffer.hpp  vertex_array.hpp
include/capra/util/: averagers.hpp  dear.hpp  enum_bitops.hpp  framecounter.hpp  log.hpp  overloaded.hpp  platform.hpp  rnd.hpp  ticker.hpp  time.hpp
include/capra/util/noise/: perlin.hpp
src/: CMakeLists.txt
src/capra/: capra.cpp
src/capra/core/: engine.cpp  glfw_callbacks.cpp  msg_bus.cpp
src/capra/core/module/: application.cpp  glcontext.cpp  inputmgr.cpp  module.cpp  window.cpp
src/capra/gfx/: color.cpp
src/capra/gfx/gl/: buffer_base.cpp  framebuffer.cpp  shader.cpp  static_buffer.cpp  vertex_array.cpp
src/capra/util/: averagers.cpp  framecounter.cpp  log.cpp  rnd.cpp  ticker.cpp
src/capra/util/noise/: perlin.cpp
tools/: gen_msg_def.py
